# MODBUS-KAFEI

./: .gitignore  MODBUS-KAFEI.spec  README.md  build.cmd  build.ps1  pyproject.toml  run.py
assets/: LICENSE.md  version_info.txt
docs/: SCOPE.md  VALIDATION.md
scripts/: load_smoke.py  ui_visual_smoke.py
src/kafei/: __init__.py  __main__.py  app.py  codec.py  csvio.py  engine.py  merge.py  modbus.py  models.py  network.py  persistence.py  point_ops.py  ui.py
tests/: test_csv_persistence.py  test_merge.py  test_modbus_engine.py  test_models_codec.py  test_ping.py  test_point_ops.py
