[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-kafei"
version = "0.1.5"
description = "Windows Modbus TCP validation desktop tool"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "Pillow>=10",
    "PyInstaller>=6",
]

[project.scripts]
kafei = "kafei.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
